--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,14 @@ h4 {
     font-family: "Keep Calm";
     font-size: large;
     margin-bottom: 11px;
+    transition: all 0.1s ease-in-out;
+}
+
+.main-button:active {
+    background-color: #6791C3;
+    box-shadow: 1px 1px #000000;
+    transform: translateY(3px);
+    transform: translateX(3px);
 }
 
 header {
@@ -489,6 +497,7 @@ nav li{
 }
 
 #email-section {
+    display: flex;
     align-self: center;
     margin-top: 9px;
     margin-bottom: 7px;
@@ -497,28 +506,22 @@ nav li{
 }
 
 #email-input {
-    background-color: #f6fafa;
+    background-color: #ffffff;
     border: 2.5px solid black;
-    border-radius: 25px 0px 0px 25px;
-    height: 25px;
-    box-shadow: 0px 3px;
-    border-right: none;
-    width: 300px;
-    padding-left: 13px;
+    border-radius: 25px;
+    padding: 7px;
+    width: 92.5%;
     font-family: "Keep Calm";
     font-size: 12px;
     font-weight: 100;
+    margin-bottom: 7px;
 }
 
 #email-sign-up-button {
-    height: 32px;
-    box-shadow: 3px 3px;
-    width: 100px;
-    padding: 5px;
+    padding: 5px 10px;
+    margin-left: -50px;
     font-size: 12px;
-    margin-bottom: 0;
-    margin-left: -20px;
-    outline: none;
+    text-wrap: nowrap;
 }
 
 /* FOOTER: */
